# CRZ64I

./: .gitignore  CONTRIBUTING.md  CRZ64I.py  CRZ64I.rs  CRZ64I_Documentation.md  LICENSE  MANIFEST.in  README.md  TODO.md  apply_crz_patch.sh  assembler.py  compiler.py  config.json  crz64i_calib.patch  crz64i_grammar.ebnf  crz64i_patch.diff  crz64i_patch_1.diff  crz64i_patch_2.diff  crz64i_patch_3.diff  crz64i_patch_4.diff  debug_parser.py  energy_config.json  fibonacci.crz  fusion_pass.py  fuzz.py  grammar.py  harness.py  implementation_plan.md  index.html  instructions.py  instructions_table.md  main.py  output.txt  parse_output.txt  pyproject.toml  quick_test.py  results_micro_add.csv  reversible_pass.py  semantic_checker.py  simulator.py  (+5 more)
bench/: calib_cycles.json  micro_add  micro_add.c  micro_load  micro_load.c  microbench.py  op_results.json  out.csv  result.csv  result_cycles.csv  result_final.csv  result_fixed.csv  result_postcal.csv  result_updated.csv
docs/: compiler.md  contrib.md  index.md  isa.md  language.md  simulator.md
examples/: fibonacci.crz  gemm.crz  hot_loop.crz  micro_add.crz  roundtrip_test.crz
scripts/: release.sh
tests/: fuzz_parser.py  fuzz_simulator.py  test_measure_micro_add.py  test_property_reversible.py  test_reversible_block.py  test_runtime_scheduler.py  test_sandboxing.py  test_semantic_attr_placement.py  test_semantic_equivalence.py  test_semantic_realtime.py
tools/: apply_measurements.py  auto_measure_ops.py  (+11 more)
tools.bak/: auto_measure_ops.py  calibrate_cycles.py  calibrate_energy.py  measure_hw.py  measure_micro_add.py
(+52 files in other folders)
